[package]
name = "mpanel-memory-graph"
version = "0.1.0"
authors = ["Alvin Peters <alvin@striczkof.io>"]
edition = "2021"
repository = "https://github.com/striczkof/mpanel-memory-graph-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
duration-str = "0.8.1"
nix = {version = "0.28.0", features = ["fs"]}
mac_address = "1.1.6"
regex = "1.10.4"
rand = "0.8.5"