[package]
name = "mpanel-memory-graph"
version = "0.2.0"
authors = ["Alvin Peters <alvin@striczkof.io>"]
edition = "2021"
repository = "https://github.com/striczkof/mpanel-memory-graph-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
duration-str = "0.9.1"
rand = "0.8.5"
sysinfo = "0.30.11"
configparser = "3.0.4"